fixed search bar dropdown issue on desktop view, slightly wrong on mobile still

--- a/webapp/chef_ai/static/chef_ai/styles/searchbar.css
+++ b/webapp/chef_ai/static/chef_ai/styles/searchbar.css
@@ -9,7 +9,7 @@
     
 }
 .search-wrapper form {
-    position:relative;
+    position: relative;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -17,6 +17,7 @@
     width:100%;
     max-width: 35rem;
 }
+
 
 #searchInput {
     padding: .5rem .5rem;
@@ -67,18 +68,19 @@
     right:0;
     z-index: 1000;
     background-color: white;
-
-    
     box-shadow: 0px 2px 4px black;
     border-radius: .5rem;
     border:1px solid #ccc;
-    padding:.5rem .5rem;
-  }
-  /*     cursor: pointer;
     color:black;
+    cursor: pointer;
+    
+  }
+  /*     
+    
       margin-top: 3.5rem;
       width:80%;/* set to be same size as the search bar
     max-width: 35rem;/* set to be same size as the search bar
+    padding:.5rem .5rem;
   */
 
 /* contents of dropdown styling */
@@ -105,8 +107,7 @@
         align-items: center;
         
     }
-    .search-wrapper .suggestion-box{
-        margin-top:15rem;
+    .search-wrapper .suggestion-box{     
         width:24.5rem;
     }
 }
